--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -16,14 +16,14 @@
     <thead>
         <tr>
             <th> Tipo </th>
-            <th> Nome </th>
+            <th> Descrição </th>
             <th> Ações </th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor = "let item of items" >
             <td> {{ item.type }} </td>
-            <td> {{ item.name }} </td>
+            <td> {{ item.description }} </td>
             <td>
                 <button (click) = "updateItem(item.id)" class = "btn btn-primary"> Atualizar</button>
                 <button (click) = "deleteItem(item.id)" class = "btn btn-danger" style="margin-left: 10px"> Deletar</button>
