--- a/src/app/update-item/update-item.component.html
+++ b/src/app/update-item/update-item.component.html
@@ -12,9 +12,9 @@
                             name="type">
                     </div>
                     <div class="form-group">
-                        <label> Nome </label>
-                        <input type="text" class="form-control" id="name" [(ngModel)]="item.name"
-                            name="name">
+                        <label> Descrição </label>
+                        <input type="text" class="form-control" id="description" [(ngModel)]="item.description"
+                            name="description">
                     </div>
 
                     <br />
