--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -2,17 +2,34 @@
     <div>
         <h2 style="color: white; padding: 6px 0 0 15px;"> Consultar Items </h2>
     </div>
-    <ul class = "navbar-nav">
-        <li class = "nav-item">
-            <a routerLink="" routerLinkActive="active" class="nav-link" style="color: white; padding-right: 20px" >Lista de Itens</a>
+    <div style="flex-direction: column;">
+        <div style="display: inline-flex; margin-right: 60px">
+            <label for="types">Tipo do item</label>
+            <select #searchType id="types">
+                <option value="" selected>-- Escolha o Tipo --</option>
+                <option value="acessório">Acessório</option>
+                <option value="documento">Documento</option>
+                <option value="dispositivo">Dispositivo</option>
+                <option value="outro">Outro</option>
+            </select>
+        </div>
+        <div style="display: inline-flex;">
+            <input #searchDescription type="search" placeholder="Buscar" class="form-control">
+        </div>
+    </div>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a routerLink="" routerLinkActive="active" class="nav-link" style="color: white; padding-right: 20px">Lista
+                de Itens</a>
         </li>
-        <li class = "nav-item">
-            <a routerLink="../create-item" routerLinkActive="active" class="nav-link" style="color: white; padding-right: 30px" >Criar Item</a>
+        <li class="nav-item">
+            <a routerLink="../create-item" routerLinkActive="active" class="nav-link"
+                style="color: white; padding-right: 30px">Criar Item</a>
         </li>
     </ul>
 </nav>
 
-<table class = "table table-striped table-bordered">
+<table class="table table-striped table-bordered">
     <thead>
         <tr>
             <th> Tipo </th>
@@ -21,12 +38,12 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor = "let item of items" >
+        <tr *ngFor="let item of (items | filterItems : filterType : filterDescription)">
             <td> {{ item.type }} </td>
             <td> {{ item.description }} </td>
             <td>
-                <button (click) = "updateItem(item.id)" class = "btn btn-primary"> Atualizar</button>
-                <button (click) = "deleteItem(item.id)" class = "btn btn-danger" style="margin-left: 10px"> Deletar</button>
+                <button (click)="updateItem(item.id)" class="btn btn-primary"> Atualizar</button>
+                <button (click)="deleteItem(item.id)" class="btn btn-danger" style="margin-left: 10px"> Deletar</button>
             </td>
         </tr>
     </tbody>
