--- a/src/app/create-item/create-item.component.html
+++ b/src/app/create-item/create-item.component.html
@@ -7,17 +7,22 @@
                 <form (ngSubmit)="onSubmit()">
                     <div class="form-group">
                         <label> Tipo </label>
-                        <input type="text" class="form-control" id="type" [(ngModel)]="item.type"
+                        <select required class="form-control" id="type" [(ngModel)]="item.type"
                         name="type">
+                            <option value="Acessório">Acessório</option>
+                            <option value="Documento">Documento</option>
+                            <option value="Dispositivo">Dispositivo</option>
+                            <option value="Outro">Outro</option>
+                        </select>
                     </div>
                     <div class="form-group">
                         <label> Descrição </label>
-                        <input type="text" class="form-control" id="description" [(ngModel)]="item.description"
+                        <input required type="text" class="form-control" id="description" [(ngModel)]="item.description"
                             name="description">
                     </div>
                     
                     <br />
-                    <button class="btn btn-success" type="submit">Submit</button>
+                    <button class="btn btn-success" type="submit">Criar</button>
 
                 </form>
             </div>
