--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -7,10 +7,10 @@
             <label for="types">Tipo do item</label>
             <select #searchType id="types">
                 <option value="" selected>-- Escolha o Tipo --</option>
-                <option value="acessório">Acessório</option>
-                <option value="documento">Documento</option>
-                <option value="dispositivo">Dispositivo</option>
-                <option value="outro">Outro</option>
+                <option value="Acessório">Acessório</option>
+                <option value="Documento">Documento</option>
+                <option value="Dispositivo">Dispositivo</option>
+                <option value="Outro">Outro</option>
             </select>
         </div>
         <div style="display: inline-flex;">
@@ -18,10 +18,6 @@
         </div>
     </div>
     <ul class="navbar-nav">
-        <li class="nav-item">
-            <a routerLink="" routerLinkActive="active" class="nav-link" style="color: white; padding-right: 20px">Lista
-                de Itens</a>
-        </li>
         <li class="nav-item">
             <a routerLink="../create-item" routerLinkActive="active" class="nav-link"
                 style="color: white; padding-right: 30px">Criar Item</a>
