--- a/src/app/update-item/update-item.component.html
+++ b/src/app/update-item/update-item.component.html
@@ -5,11 +5,15 @@
             <hr />
             <div class="card-body">
                 <form (ngSubmit)="onSubmit()">
-
                     <div class="form-group">
                         <label> Tipo </label>
-                        <input type="text" class="form-control" id="type" [(ngModel)]="item.type"
-                            name="type">
+                        <select required class="form-control" id="type" [(ngModel)]="item.type"
+                        name="type">
+                            <option value="Acessório">Acessório</option>
+                            <option value="Documento">Documento</option>
+                            <option value="Dispositivo">Dispositivo</option>
+                            <option value="Outro">Outro</option>
+                        </select>
                     </div>
                     <div class="form-group">
                         <label> Descrição </label>
