--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center"> {{title}} </h1>
 <div class = "container">
+    <h1> {{title}} </h1>
     <router-outlet></router-outlet>
 </div>
