--- a/src/app/update-item/update-item.component.html
+++ b/src/app/update-item/update-item.component.html
@@ -34,9 +34,9 @@
                     </button>
                 </a>
                 <a>
-                    <button (click)="clearSearch()" class="btn btn-default orange-button">
+                    <button (click)="resetEdit()" class="btn btn-default orange-button" type="button">
                         <fa-icon [icon]="faUndo"></fa-icon>
-                        Limpar
+                        Desfazer
                     </button>
                 </a>
                 <a>
